--- a/validaitionPractice.html
+++ b/validaitionPractice.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
     <style>
+        section{
+            padding-left: 30px;
+        }
         #form {
-            background-color: #f5f5f5;
-            padding: 10px 20px;
+            background-color: #F1F6F7;
+            padding: 20px 30px;
             border-radius: 5px;
+            width: 100%;
+            align-content: center;
+            margin: 0,auto;
+            display: block;
+            overflow: hidden;
         }
         .input {
             width: 50%;
@@ -42,7 +50,7 @@
             display: block;
             padding: 10px 10px;
             width: 100%;
-            background-color: #4caf50;
+            background-color: rgb(36, 173, 201);
             color: white;
             text-align: center;
             margin: 13px auto;
@@ -51,18 +59,20 @@
             font-size: large;
         }
         #submit:hover {
-            background-color: #45a049;
+            background-color: #1E7F92;
         }
         #resister div {
-            background-color:ivory;
+            background-color:rgb(48, 175, 201);
             padding: 10px 20px;
             border-radius: 5px;
+            color: white;
+            font-size: large;
         }
         .red{
-            border: 1px solid rgb(236, 64, 64);
+            border: 1px solid rgb(223, 37, 37);
         }
         .vali{
-            color: rgb(236, 64, 64);
+            color: rgb(223, 37, 37);
             box-sizing: border-box;
             display: inline-block;
             margin-bottom: 20px;
@@ -71,15 +81,30 @@
             display: inline-block;
         }
         .check{
-            color: #4caf50;
+            color: rgb(36, 173, 201);
             margin-left: 22px;
         }
         header{
             padding: 20px;
+            padding-left: 30px;
+            background-color: white;
+        }
+        #headline{
+            width: 100%;
+            height: 46px;
+            background-color: rgb(36, 173, 201);
+            margin: 0;
+            padding: 3px;
+            padding-left: 30px;
+            color: white;
+            line-height: 40px;
+            font-size: x-large;
+            
         }
     </style>
 </head>    
 <body>
+<div id="headline"><i class="fab fa-discourse"></i></i></div>
 <header>
     <h1>회원 가입</h1>
     <p>회원 가입을 위해서 당신의 몇가지 정보를 얻습니다.</p>
@@ -92,7 +117,7 @@
         <input type="text" class="input" id="firstname" placeholder="성을 입력하세요">
     </div>
     <div>
-        <span class="label">이름</span>
+        <span class="label">*이름</span>
         <input type="text" class="input" id="lastname" placeholder="이름을 입력하세요">
     </div>
     <div>
